tests/snapshots/integration__integration_tests__config_show__config_show_displays_pre_hook_table_form_deprecation.snap
---
source: tests/integration_tests/config_show.rs
info:
  program: wt
  args:
    - config
    - show
  env:
    APPDATA: "[TEST_CONFIG_HOME]"
    CLICOLOR_FORCE: "1"
    COLUMNS: "500"
    GIT_AUTHOR_DATE: "2025-01-01T00:00:00Z"
    GIT_COMMITTER_DATE: "2025-01-01T00:00:00Z"
    GIT_CONFIG_GLOBAL: "[TEST_GIT_CONFIG]"
    GIT_CONFIG_SYSTEM: /dev/null
    GIT_EDITOR: ""
    GIT_TERMINAL_PROMPT: "0"
    HOME: "[TEST_HOME]"
    LANG: C
    LC_ALL: C
    MOCK_CONFIG_DIR: "[MOCK_CONFIG_DIR]"
    NO_COLOR: ""
    OPENCODE_CONFIG_DIR: "[TEST_OPENCODE_CONFIG]"
    PATH: "[PATH]"
    PSModulePath: ""
    RUST_LOG: warn
    SHELL: ""
    TERM: alacritty
    USERPROFILE: "[TEST_HOME]"
    WORKTRUNK_APPROVALS_PATH: "[TEST_APPROVALS]"
    WORKTRUNK_CONFIG_PATH: "[TEST_CONFIG]"
    WORKTRUNK_SYSTEM_CONFIG_PATH: "[TEST_SYSTEM_CONFIG]"
    WORKTRUNK_TEST_CLAUDE_INSTALLED: "0"
    WORKTRUNK_TEST_DELAYED_STREAM_MS: "-1"
    WORKTRUNK_TEST_EPOCH: "1735776000"
    WORKTRUNK_TEST_NUSHELL_ENV: "0"
    WORKTRUNK_TEST_OPENCODE_INSTALLED: "0"
    WORKTRUNK_TEST_POWERSHELL_ENV: "0"
    WORKTRUNK_TEST_SKIP_URL_HEALTH_CHECK: "1"
    XDG_CONFIG_HOME: "[TEST_CONFIG_HOME]"
---
success: true
exit_code: 0
----- stdout -----
[36mUSER CONFIG[39m @ ~/.config/worktrunk/config.toml
[2m↳[22m [2mNot found; to create one, run [4mwt config create[24m[22m

[36mPROJECT CONFIG[39m @ _REPO_/.config/wt.toml
[33m▲[39m [33mProject config: table form for [1mpre-create[22m, [1mpre-merge[22m is deprecated in favor of the pipeline form. We're unifying pre-hooks, post-hooks, and aliases so that list form always runs serially and table form always runs in parallel — migrate now to keep the current serial behavior once the table form is repurposed.[39m
[2m↳[22m [2mTo apply: [4mwt config update[24m[22m
[2m○[22m Proposed diff:
[107m [0m [1mdiff --git a/wt.toml/current b/wt.toml/migrated[m
[107m [0m [1mindex a85327e..319e745 100644[m
[107m [0m [1m--- a/wt.toml/current[m
[107m [0m [1m+++ b/wt.toml/migrated[m
[107m [0m [36m@@ -1,7 +1,11 @@[m
[107m [0m [31m-[pre-merge][m
[107m [0m [32m+[m[32m[[pre-merge]][m
[107m [0m  test = "cargo test"[m
[107m [0m [32m+[m
[107m [0m [32m+[m[32m[[pre-merge]][m
[107m [0m  lint = "cargo clippy"[m
[107m [0m  [m
[107m [0m [31m-[pre-create][m
[107m [0m [32m+[m[32m[[pre-create]][m
[107m [0m  install = "npm ci"[m
[107m [0m [32m+[m
[107m [0m [32m+[m[32m[[pre-create]][m
[107m [0m  env = "cp .env.example .env"[m

[36mSHELL INTEGRATION[39m
[33m▲[39m [33mShell integration not active[39m
[107m [0m Invoked as: [1m[PROJECT_ROOT]/target/debug/wt[22m

[2m○[22m [2mbash: Skipped; ~/.bashrc not found[22m
[2m○[22m [2mzsh: Skipped; ~/.zshrc not found[22m
[2m○[22m [2mfish: Skipped; ~/.config/fish/functions not found[22m
[2m○[22m [2mnu: Skipped; ~/.config/nushell/vendor/autoload not found[22m

[36mOTHER[39m
[2m○[22m wt: [1m[VERSION][22m
[2m○[22m git: [1m[VERSION][22m
[2m○[22m Hyperlinks: [1minactive[22m

----- stderr -----
